--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
   </script>
 
   <!-- ✅ PayPal JS SDK (PUT YOUR CLIENT ID) -->
-  <script src="https://www.paypal.com/sdk/js?client-id=AYYBW3PCNYS6A&currency=USD&intent=capture"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=ARPujaExbPU50Hj0kqNpn9j0yx-oPf96whc5YgreLWcPrkWzlVzOwDxO3teVJjBG2-WCsgzSh45Xpbi2&currency=USD&intent=capture"></script>
 
   <script>
     document.addEventListener('DOMContentLoaded', async () => {
